[gd_scene load_steps=3 format=2]

[ext_resource path="res://3D_Sprites/test_ghost_1.png" type="Texture" id=1]
[ext_resource path="res://enemy_ai.gd" type="Script" id=2]

[node name="enemy" type="Sprite3D" groups=[
"enemies",
]]
pixel_size = 0.02
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="action_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="front_ray" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, 2 )
collide_with_areas = true

[node name="back_ray" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collide_with_areas = true

[node name="left_ray" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 2, 0, 0 )
collide_with_areas = true

[node name="right_ray" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( -2, 0, 0 )
collide_with_areas = true
[connection signal="timeout" from="action_timer" to="." method="_on_action_timer_timeout"]
